--- a/SDD_P02_Group1/Views/_ViewImports.cshtml
+++ b/SDD_P02_Group1/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SDD_P02_Group1
 @using SDD_P02_Group1.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Http;
