--- a/SDD_P02_Group1/Views/Home/Create.cshtml
+++ b/SDD_P02_Group1/Views/Home/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model SDD_P02_Group1.Models.User
 
 @{
-    ViewData["Title"] = "Create User Profile";
+    ViewData["Title"] = "Register";
 }
 
-<h4>Create User Profile</h4>
-<hr />
-<div class="row">
+<h4 class="font-weight-bold text-center" style="margin:2em">Register</h4>
+<div class="row justify-content-md-center">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -25,10 +24,12 @@
                 <input type="password" asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center" style="margin-top: 2rem">
                 <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Go Back</a>&nbsp;
                 <input type="submit" value="Create Profile" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+
+<p class="text-center" style="margin: 1rem ">Already have an account? <a asp-controller="Home" asp-action="Login">Login now!</a></p>
