--- a/SDD_P02_Group1/Views/Home/Login.cshtml
+++ b/SDD_P02_Group1/Views/Home/Login.cshtml
@@ -17,6 +17,7 @@
                     <input type="password" class="form-control" name="txtPassword" id="txtPassword" required />
                 </div>
                 <div class="form-group text-center" style="margin-top: 2rem">
+                    <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Go Back</a>&nbsp;
                     <input type="submit" id="btnLogin" class="btn btn-primary" value="Login" style="width:100px" />
                 </div>
                 <div class="text-center">
