--- a/SDD_P02_Group1/Views/Shared/_Layout.cshtml
+++ b/SDD_P02_Group1/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        @if (Context.Session.GetString("User") != null)
+        @if (Context.Session.GetString("Role") != null && Context.Session.GetString("Role") == "User")
             {
                 @await Html.PartialAsync("_UserMenu.cshtml")
             }
@@ -21,7 +21,7 @@
                 <div class="container">
 
                     <a class="navbar-brand" href="~/Home/Index"
-                       style="color: orange; font-weight: bold; font-size: medium; word-break: break-word;">
+                        style="color: #7f218a; font-weight: bold; font-size: 24px; word-break: break-word;">
                         Moo<span style="color: #0E152D">lah</span>
                     </a>
 
@@ -50,10 +50,10 @@
                         </ul>
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Home" asp-action="Login" style="color: orange">Login</a>
+                                <a class="nav-link" asp-controller="Home" asp-action="Login" style="color: #b429c4">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Home" asp-action="Create" style="color: orange">Register</a>
+                                <a class="nav-link" asp-controller="Home" asp-action="Create" style="color: #b429c4">Register</a>
                             </li>
                         </ul>
                     </div>
