--- a/SDD_P02_Group1/Views/Shared/_UserMenu.cshtml
+++ b/SDD_P02_Group1/Views/Shared/_UserMenu.cshtml
@@ -25,7 +25,8 @@
 
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="SignOut" style="color: #b429c4">Sign Out</a>
+                    <!--<a class="nav-link" asp-controller="Home" asp-action="SignOut" style="color: #b429c4">Sign Out</a>-->
+                    <a class="nav-link" asp-controller="Account" asp-action="Index" style="color: #b429c4">@ViewData["UserName"]</a>
                 </li>
             </ul>
         </div>
