--- a/SDD_P02_Group1/Views/Home/Login.cshtml
+++ b/SDD_P02_Group1/Views/Home/Login.cshtml
@@ -29,7 +29,7 @@
 </div>
 
 
-<p class="text-center" style="margin: 1rem "><a data-toggle="modal" data-target="#resetPasswordConfirmation">Forgot Password?</a></p>
+<p class="text-center" style="margin: 1rem ">Forgot Password?<a style = "color: blue;" data-toggle="modal" data-target="#resetPasswordConfirmation"> Click here.</a></p>
 
 
 
@@ -49,7 +49,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                Please enter the email you used to singup. If the account exists, an email will be sent to it.
+                Please enter the email you used to sign up. If the account exists, an email will be sent to it.
                 <br><br>
                     <form method="post" action="~/Home/ResetPassword">
                         <input type="email" class="form-control" name="passwordResetEmail">
