--- a/SDD_P02_Group1/Views/Home/Login.cshtml
+++ b/SDD_P02_Group1/Views/Home/Login.cshtml
@@ -29,14 +29,7 @@
 </div>
 
 
-<p class="text-center" style="margin: 1rem ">Forgot Password?<a style = "color: blue;" data-toggle="modal" data-target="#resetPasswordConfirmation"> Click here.</a></p>
-
-
-
-@*<button id="hide" style="margin: 1rem" type="button" class="btn btn-danger" data-toggle="modal" data-target="#resetPasswordConfirmation">
-        Proceed to Joint Applicant
-    </button>
-*@
+<p class="text-center" style="margin: 1rem ">Forgot Password?<a href="#" data-toggle="modal" data-target="#resetPasswordConfirmation"> Click here</a></p>
 <p class="text-center" style="margin: 1rem ">No Account? <a asp-controller="Home" asp-action="Create">Create One!</a></p>
 
 <div class="modal fade" id="resetPasswordConfirmation" tabindex="-1" role="dialog" aria-labelledby="resetPasswordConfirmation" aria-hidden="true">
