--- a/SDD_P02_Group1/Views/Asset/Index.cshtml
+++ b/SDD_P02_Group1/Views/Asset/Index.cshtml
@@ -25,9 +25,34 @@
                 </td>
                 <td>
                     <a asp-action="Details" asp-controller="Asset"
-                       asp-route-id="@item.AssetID">Details</a>
+                       asp-route-id="@item.AssetID">Details</a> |
+
+                    <form asp-action="Delete" asp-controller="Asset" asp-route-id="@item.AssetID" enctype="multipart/form-data" id="assetDeleteForm">
+                        <a href="#" data-toggle="modal" data-target="#deleteAssetConfirmation">Delete</a>
+                    </form>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+
+<div class="modal fade" id="deleteAssetConfirmation" tabindex="-1" role="dialog" aria-labelledby="deleteAssetConfirmation" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Confirmation<h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this asset?
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <input type="submit" value="Confirm" class="btn btn-danger" form="assetDeleteForm" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
