--- a/SDD_P02_Group1/Views/Asset/Index.cshtml
+++ b/SDD_P02_Group1/Views/Asset/Index.cshtml
@@ -25,9 +25,9 @@
                 </td>
                 <td>
                     <a asp-action="Details" asp-controller="Asset"
-                       asp-route-id="@item.AssetID">Details</a> |
+                       asp-route-id="@item.AssetID" style="padding-left: 1em;">Details</a> |
 
-                    <form asp-action="Delete" asp-controller="Asset" asp-route-id="@item.AssetID" enctype="multipart/form-data" id="assetDeleteForm">
+                    <form asp-action="Delete" asp-controller="Asset" asp-route-id="@item.AssetID" enctype="multipart/form-data" class="form-check-inline" id="assetDeleteForm">
                         <a href="#" data-toggle="modal" data-target="#deleteAssetConfirmation">Delete</a>
                     </form>
                 </td>
