made user able to see no emai error and also fixed error in user dal

--- a/SDD_P02_Group1/Views/Home/Login.cshtml
+++ b/SDD_P02_Group1/Views/Home/Login.cshtml
@@ -25,19 +25,20 @@
                 </div>
             </fieldset>
         </form>
-        @if (TempData["LoginErrorMessage"] != "")
-        {
-            <script type="text/javascript">
-                $(function () {
-                    $('#resetPasswordConfirmation').modal('show');
-            });
-            </script>
-        }
+        @*        @if (TempData["LoginErrorMessage"] != "")
+            {
+                <script type="text/javascript">
+                    $(document).ready(function () {
+                        $('#resetPasswordConfirmation').modal('show');
+                    });
+
+                </script>
+            }*@
     </div>
 </div>
 
 
-<p class="text-center" style="margin: 1rem ">Forgot Password? <a href="#" data-toggle="modal" data-target="#resetPasswordConfirmation">Click here</a></p>
+<p class="text-center" style="margin: 1rem ">Forgot Password? <a href="#" data-toggle="modal" data-target="#resetPasswordConfirmation">Click here</a></br><span class="text-center text-danger">@TempData["NoEmailFoundError"]</span></p>
 <p class="text-center" style="margin: 1rem ">No Account? <a asp-controller="Home" asp-action="Create">Create One!</a></p>
 
 <div class="modal fade" id="resetPasswordConfirmation" tabindex="-1" role="dialog" aria-labelledby="resetPasswordConfirmation" aria-hidden="true">
@@ -52,7 +53,6 @@
             <div class="modal-body">
                 Please enter the email you used to sign up. If the account exists, an email will be sent to it.
                 <br><br>
-                <span class="text-danger">@TempData["NoEmailFoundError"]</span>
                 <form method="post" action="~/Home/ResetPassword">
                     <input type="email" class="form-control" name="passwordResetEmail">
                     <br>
@@ -68,4 +68,3 @@
         </div>
     </div>
 </div>
-
