Add Create Asset Page.

--- a/SDD_P02_Group1/Views/Asset/Index.cshtml
+++ b/SDD_P02_Group1/Views/Asset/Index.cshtml
@@ -7,7 +7,7 @@
 <h2 style="margin-top: 2em;"><span style="color: #7f218a;">Assets</span></h2>
 
 <p>
-    <a asp-action="Create">Add New Asset</a>
+    <a asp-controller="Asset" asp-action="Create">Add New Asset</a>
 </p>
 <table>
     <thead>
