--- a/SDD_P02_Group1/Views/Account/Index.cshtml
+++ b/SDD_P02_Group1/Views/Account/Index.cshtml
@@ -13,7 +13,7 @@
         <h5>Email Address: <span style="color: #84508f";>@ViewData["userEmail"]</span> </h5>
 
     <div style="margin-top: 20rem">
-        <a asp-controller="Account" asp-action="#" style="color: #b429c4">Edit Account Info</a><br /> <!-- asp-action="Edit"-->
+        <a asp-controller="Account" asp-action="Edit" style="color: #b429c4">Edit Account Info</a><br />
         <a asp-controller="Home" asp-action="SignOut" style="color: #b429c4">Sign Out</a>
     </div>
 </div>
