--- a/SDD_P02_Group1/Views/Account/Edit.cshtml
+++ b/SDD_P02_Group1/Views/Account/Edit.cshtml
@@ -2,36 +2,38 @@
 
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Account";
 }
 
+<h4 class="font-weight-bold text-center" style="margin:2em">Edit Account Info</h4>
+<div class="row justify-content-md-center">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<div class="col-md-4">
-    <form asp-action="Edit">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Username" class="control-label"></label><br />
-            <input asp-for="Username" class="form-control-plaintext"/>
-            <span asp-validation-for="Username" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password" class="control-label"></label>
-            <input asp-for="Password" class="form-control-plaintext"/>
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="EmailAddr" class="control-label"></label>
-            <input asp-for="EmailAddr" class="form-control-plaintext"/>
-            <span asp-validation-for="EmailAddr" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Save" class="btn btn-primary col-sm-4"/>
-        </div>
-    </form>
-</div>
+            <div class="form-group">
+                <label asp-for="Username" class="control-label"></label><br />
+                <input asp-for="Username" class="form-control" />
+                <span asp-validation-for="Username" class="text-danger"></span>
+            </div>
 
-<div>
-    <a asp-action="Index">Back to Profile</a>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="EmailAddr" class="control-label"></label>
+                <input asp-for="EmailAddr" class="form-control" />
+                <span asp-validation-for="EmailAddr" class="text-danger"></span>
+            </div>
+            <div class="form-group text-center" style="margin-top:2rem;">
+                <a asp-action="Index" class="btn btn-secondary">Back to Profile</a>
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 </div>
 
 @section Scripts {
