--- a/SDD_P02_Group1/Views/Shared/_UserMenu.cshtml
+++ b/SDD_P02_Group1/Views/Shared/_UserMenu.cshtml
@@ -13,7 +13,10 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-controller="Asset" asp-action="Index" >Manage Assets</a>
+                    <a class="nav-link text-dark" asp-controller="Asset" asp-action="Index">Manage Assets</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-controller="Liability" asp-action="Index">Manage Liabilities</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="#">Predict</a>
