--- a/SDD_P02_Group1/Views/Liability/Create.cshtml
+++ b/SDD_P02_Group1/Views/Liability/Create.cshtml
@@ -18,9 +18,19 @@
                 <span asp-validation-for="LiabilityName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="LiabilityType" class="control-label"></label>
+                <input asp-for="LiabilityType" class="form-control" />
+                <span asp-validation-for="LiabilityType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LiabilityDesc" class="control-label"></label>
+                <input asp-for="LiabilityDesc" class="form-control" />
+                <span asp-validation-for="LiabilityDesc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Cost" class="control-label"></label>
+                <input asp-for="Cost" class="form-control" />
+                <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DueDate" class="control-label"></label>
@@ -28,9 +38,14 @@
                 <span asp-validation-for="DueDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AmountDue" class="control-label"></label>
-                <input asp-for="AmountDue" class="form-control" />
-                <span asp-validation-for="AmountDue" class="text-danger"></span>
+                <label asp-for="RecurringType" class="control-label"></label>
+                <input asp-for="RecurringType" class="form-control" />
+                <span asp-validation-for="RecurringType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RecurringDuration" class="control-label"></label>
+                <input asp-for="RecurringDuration" class="form-control" />
+                <span asp-validation-for="RecurringDuration" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -43,6 +58,3 @@
     <a asp-action="Index">Back</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
