Updated assets model, view. controller and dal according to changes in db

--- a/SDD_P02_Group1/Views/Asset/Create.cshtml
+++ b/SDD_P02_Group1/Views/Asset/Create.cshtml
@@ -15,6 +15,16 @@
                 <span asp-validation-for="AssetName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AssetType" class="control-label"></label>
+                <input asp-for="AssetType" class="form-control" />
+                <span asp-validation-for="AssetType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AssetDesc" class="control-label"></label>
+                <input asp-for="AssetDesc" class="form-control" />
+                <span asp-validation-for="AssetDesc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="InitialValue" class="control-label"></label>
                 <input asp-for="InitialValue" class="form-control" />
                 <span asp-validation-for="InitialValue" class="text-danger"></span>
