--- a/SDD_P02_Group1/Views/Asset/Edit.cshtml
+++ b/SDD_P02_Group1/Views/Asset/Edit.cshtml
@@ -10,30 +10,40 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AssetName" class="control-label"></label><br />
-                <input asp-for="AssetName" readonly class="form-control-plaintext" id="change1" required/>
+                <input asp-for="AssetName" readonly class="form-control-plaintext" id="change1" required />
                 <span asp-validation-for="AssetName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AssetDesc" class="control-label"></label><br />
+                <input asp-for="AssetDesc" readonly class="form-control-plaintext" id="change2" required />
+                <span asp-validation-for="AssetDesc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AssetType" class="control-label"></label><br />
+                <input asp-for="AssetType" readonly class="form-control-plaintext" id="change3" required />
+                <span asp-validation-for="AssetType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="InitialValue" class="control-label"></label>
-                <input asp-for="InitialValue" readonly class="form-control-plaintext" id="change2" required/>
+                <input asp-for="InitialValue" readonly class="form-control-plaintext" id="change4" required />
                 <span asp-validation-for="InitialValue" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CurrentValue" class="control-label"></label>
-                <input asp-for="CurrentValue" readonly class="form-control-plaintext" id="change3" required/>
+                <input asp-for="CurrentValue" readonly class="form-control-plaintext" id="change5" required />
                 <span asp-validation-for="CurrentValue" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PredictedValue" class="control-label"></label>
-                <input asp-for="PredictedValue" readonly class="form-control-plaintext" id="change4" required/>
+                <input asp-for="PredictedValue" readonly class="form-control-plaintext" id="change6" required />
                 <span asp-validation-for="PredictedValue" class="text-danger"></span>
             </div>
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary col-sm-4" id="assetSaveBtn" style="display: none;"/>
-                </div>
-                <div class="form-group">
-                    <input type="button" value="Edit" class="btn btn-primary col-sm-4" style="display: block;" id="assetEditBtn" onclick="changeToEdit()"/>
-                </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary col-sm-4" id="assetSaveBtn" style="display: none;" />
+            </div>
+            <div class="form-group">
+                <input type="button" value="Edit" class="btn btn-primary col-sm-4" style="display: block;" id="assetEditBtn" onclick="changeToEdit()" />
+            </div>
         </form>
     </div>
 
@@ -80,8 +90,12 @@
 <script type="text/javascript">
     function changeToEdit() {
 
+        document.getElementById("change2").readOnly = false;
+        document.getElementById("change2").className = "form-control";
         document.getElementById("change3").readOnly = false;
         document.getElementById("change3").className = "form-control";
+        document.getElementById("change5").readOnly = false;
+        document.getElementById("change5").className = "form-control";
 
         document.getElementById("assetEditBtn").style.display = "none";
         document.getElementById("assetSaveBtn").style.display = "block";
