--- a/SDD_P02_Group1/Views/Account/Edit.cshtml
+++ b/SDD_P02_Group1/Views/Account/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SDD_P02_Group1.ViewModels.EditUserViewModel
+﻿@model SDD_P02_Group1.Models.User
 
 
 @{
@@ -10,6 +10,12 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="UserId" class="control-label" hidden></label><br />
+                <input asp-for="UserId" class="form-control" hidden/>
+                <span asp-validation-for="UserId" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label><br />
