--- a/SDD_P02_Group1/Views/Liability/Index.cshtml
+++ b/SDD_P02_Group1/Views/Liability/Index.cshtml
@@ -12,7 +12,7 @@
 <table>
     <thead>
         <tr>
-            <th>Asset Name</th>
+            <th>Liability Name</th>
             <th></th>
         </tr>
     </thead>
