--- a/SDD_P02_Group1/Views/Shared/_UserMenu.cshtml
+++ b/SDD_P02_Group1/Views/Shared/_UserMenu.cshtml
@@ -19,7 +19,10 @@
                     <a class="nav-link text-dark" asp-controller="Liability" asp-action="Index">Manage Liabilities</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-controller="UserCard" asp-action="Index">Manage Spendings</a>
+                    <a class="nav-link text-dark" asp-controller="Spending" asp-action="Index">View Spendings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-controller="UserCard" asp-action="Index">Manage Cards</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="#">Predict</a>
