--- a/SDD_P02_Group1/Views/Spending/Index.cshtml
+++ b/SDD_P02_Group1/Views/Spending/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h4>Spendings for current week</h4>
+<br />
 
 <div class="table-responsive">
     <table id="ViewSpending" class="table table-striped">
@@ -92,6 +93,102 @@
         </tbody>
     </table>
 </div>
+<br />
+
+<h4>Spending Difference Compared to Previous Week</h4>
+
+<table id="ViewSpending" class="table table-striped">
+    <thead>
+        <tr>
+            <th>Monday Spending</th>
+            <th>Tuesday Spending</th>
+            <th>Wednesday Spending</th>
+            <th>Thursday Spending</th>
+            <th>Friday Spending</th>
+            <th>Saturday Spending</th>
+            <th>Sunday Spending</th>
+            <th>Total Spending</th>
+            <th>Total Spending Difference(%)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            @if (Model.weekdiff.MonSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.MonSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.TueSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.TueSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.WedSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.WedSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.ThuSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.ThuSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.FriSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.FriSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.SatSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.SatSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.SunSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.SunSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.TotalSpendingDifference is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0}{1:n2}", "$", Model.weekdiff.TotalSpendingDifference)</td>
+            }
+            @if (Model.weekdiff.TotalSpendingDifferencePercentage is null)
+            {
+                <td>No Record</td>
+            }
+            else
+            {
+                <td>@String.Format("{0:n2}{1}", Model.weekdiff.TotalSpendingDifferencePercentage,"%")</td>
+            }
+        </tr>
+    </tbody>
+</table>
+<br />
 
 <h4>Past Spending Records by Week</h4>
 
@@ -119,14 +216,70 @@
                     {
                         <tr>
                             <td>@item.FirstDateOfWeek.ToString("dd MMM yyyy")</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.MonSpending)</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.TueSpending)</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.WedSpending)</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.ThuSpending)</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.FriSpending)</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.SatSpending)</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.SunSpending)</td>
-                            <td>@String.Format("{0}{1:n2}", "$", item.TotalSpending)</td>
+                            @if (item.MonSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.MonSpending)</td>
+                            }
+                            @if (item.TueSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.TueSpending)</td>
+                            }
+                            @if (item.WedSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.WedSpending)</td>
+                            }
+                            @if (item.ThuSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.ThuSpending)</td>
+                            }
+                            @if (item.FriSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.FriSpending)</td>
+                            }
+                            @if (item.SatSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.SatSpending)</td>
+                            }
+                            @if (item.SunSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.SunSpending)</td>
+                            }
+                            @if (item.TotalSpending is null)
+                            {
+                                <td>No Record</td>
+                            }
+                            else
+                            {
+                                <td>@String.Format("{0}{1:n2}", "$", item.TotalSpending)</td>
+                            }
                         </tr>
                     }
                 }
