--- a/SDD_P02_Group1/Views/UserCard/Index.cshtml
+++ b/SDD_P02_Group1/Views/UserCard/Index.cshtml
@@ -24,8 +24,8 @@
                     @item.CardName
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-controller="UserCard"
-                       asp-route-id="@item.CardID" style="padding-left: 1em;">Details</a> |
+                    <a asp-action="Details" asp-controller="UserCard"
+                       asp-route-cardid="@item.CardID" asp-route-userid="@item.UserID" style="padding-left: 1em;">Details</a> |
 
                     <form asp-action="Delete" asp-controller="UserCard" asp-route-id="@item.CardID" enctype="multipart/form-data" class="form-check-inline" id="assetDeleteForm">
                         <a href="#" data-toggle="modal" data-target="#deleteAssetConfirmation">Delete</a>
