--- a/SDD_P02_Group1/Views/Spending/Index.cshtml
+++ b/SDD_P02_Group1/Views/Spending/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model SDD_P02_Group1.Models.SpendingViewModel
+﻿@model SDD_P02_Group1.ViewModels.SpendingViewModel
 
 @{
     ViewData["Title"] = "View Spending";
