--- a/SDD_P02_Group1/Views/Home/Index.cshtml
+++ b/SDD_P02_Group1/Views/Home/Index.cshtml
@@ -22,9 +22,15 @@
             <div class="text-center">
                 <partial name="~/Views/Home/_ViewSpendings.cshtml" model="@Model.sp" />
             </div>
+
+            //<p class="text-center" style="margin: 1rem ">Export spendings <a href="#" data-toggle="modal" data-target="#export">here</a><br></p>
+            <form method="post" action="~/Home/CreateExcel">
+                    <input type="submit" value="Export" class="btn btn-danger" />
+            </form>
+
             <br /><br />
 
-            <h3>Liabilities</h3>
+            <h3> Upcomming Liabilities</h3>
             <div class="text-center">
                 <partial name="~/Views/Home/_ViewLiabilities.cshtml" model="@Model.lb" />
             </div>
@@ -36,3 +42,31 @@
         }
     }
 </div>
+
+@*<div class="modal fade" id="export" tabindex="-1" role="dialog" aria-labelledby="exportconfirmation" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Export Spendings</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Please enter the name of the Excel file
+                <br><br>
+                <form method="post" action="~/Home/CreateExcel">
+                    <input type="text" class="form-control" name="filepath">
+                    <br>
+                    <div class="float-right">
+                        <br>                        
+                        <input type="submit" value="Export" class="btn btn-danger" />
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+                <div class="modal-footer">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>*@
