Changed the way the excel file is exported

--- a/SDD_P02_Group1/Views/Home/Index.cshtml
+++ b/SDD_P02_Group1/Views/Home/Index.cshtml
@@ -25,7 +25,10 @@
 
             //<p class="text-center" style="margin: 1rem ">Export spendings <a href="#" data-toggle="modal" data-target="#export">here</a><br></p>
             <form method="post" action="~/Home/CreateExcel">
-                    <input type="submit" value="Export" class="btn btn-danger" />
+                <input type="submit" value="Export" class="btn btn-danger" />
+            </form>
+            <form method="post" action="#">
+                <input type="submit" value="Inport" class="btn btn-danger" />
             </form>
 
             <br /><br />
