Added validation into excel and improved UI a bit

--- a/SDD_P02_Group1/Views/Home/Index.cshtml
+++ b/SDD_P02_Group1/Views/Home/Index.cshtml
@@ -25,12 +25,12 @@
 
             //<p class="text-center" style="margin: 1rem ">Export spendings <a href="#" data-toggle="modal" data-target="#export">here</a><br></p>
 
-            <div class="row">
+            <div class="row float-right">
                 <form method="post" action="~/Home/CreateExcel">
-                    <input type="submit" value="Export" class="btn btn-danger" />
+                    <input type="submit" value="Export" class="btn btn-danger m-1" />
                 </form>
                 <form method="post" action="#">
-                    <input type="submit" value="Inport" class="btn btn-danger" />
+                    <input type="submit" value="Inport" class="btn btn-danger m-1" />
                 </form>
             </div>
 
