Add Assets search bar

--- a/SDD_P02_Group1/Views/Asset/Index.cshtml
+++ b/SDD_P02_Group1/Views/Asset/Index.cshtml
@@ -3,12 +3,19 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <h2 style="margin-top: 2em;"><span style="color: #7f218a;">Assets</span></h2>
 
 <p>
     <a asp-controller="Asset" asp-action="Create">Add New Asset</a>
 </p>
+<div style="width: 300px" class="input-group rounded">
+    <input type="search" class="form-control rounded" placeholder="Search" id="AssetSearch"/>
+    <span class="input-group-text border-0">
+        <i class='bx bx-search'></i>
+    </span>
+</div>
+<br />
 <table>
     <thead>
         <tr>
@@ -19,7 +26,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="AssetSearch">
                 <td>
                     @item.AssetName
                 </td>
@@ -56,3 +63,27 @@
         </div>
     </div>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        function Contains(text_one, text_two) {
+            if (text_one.indexOf(text_two) != -1)
+                return true;
+        }
+        $("#AssetSearch").keyup(function () {
+            var searchText = $("#AssetSearch").val().toLowerCase();
+
+            $(".AssetSearch").each(function () {
+                if (!Contains($(this).text().toLowerCase(), searchText)) {
+                    $(this).hide();
+                }
+                else {
+                    $(this).show();
+                }
+
+            });
+        });
+
+    });
+</script>
