--- a/SDD_P02_Group1/Views/UserCard/Index.cshtml
+++ b/SDD_P02_Group1/Views/UserCard/Index.cshtml
@@ -9,6 +9,11 @@
 <p>
     <a asp-controller="UserCard" asp-action="Create">Add New Card</a>
 </p>
+
+@if (Model.ToList().Count > 0)
+{
+
+
 <table>
     <thead>
         <tr>
@@ -17,21 +22,31 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.CardName
-                </td>
-                <td>
-                    <a asp-action="Details" asp-controller="UserCard"
-                       asp-route-cardid="@item.CardID" asp-route-userid="@item.UserID" style="padding-left: 1em;">Details</a> |
-
-                    <form asp-action="Delete" asp-controller="UserCard" asp-route-id="@item.CardID" enctype="multipart/form-data" class="form-check-inline" id="assetDeleteForm">
-                        <a href="#" data-toggle="modal" data-target="#deleteAssetConfirmation">Delete</a>
-                    </form>
-                </td>
-            </tr>
+        @{
+            var count = 1;
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @item.CardName
+                    </td>
+                    <td>
+                        <div>
+                            <a asp-action="Details" asp-controller="UserCard"
+                               asp-route-cardid="@item.CardID" asp-route-userid="@item.UserID" style="padding-left: 1em;">Details</a> |
+                            <a asp-action="Delete" asp-controller="UserCard"
+                               asp-route-userid="@item.UserID" asp-route-cardid="@item.CardID">Delete</a>
+                        </div>
+                    </td>
+                </tr>
+                count++;
+            }
         }
     </tbody>
 </table>
+}
+
+else 
+{ 
+    <p>You do not have any cards added!</p>
+}
